Update vector db insert script to take in the total number of entries and add multiprocessing

--- a/open_search_scripts/InsertCleanedMetaToOpenSearch.ipynb
+++ b/open_search_scripts/InsertCleanedMetaToOpenSearch.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "908ba56c-2157-44ef-b862-4cc7f44ea92e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Flow:\n",
     "1) Get 5000 entries from database\n",
@@ -22,7 +26,10 @@
    "execution_count": 6,
    "id": "9d5caeaf-3418-4c27-bab6-8816541834ac",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -87,7 +94,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "2c44d21c-dd9b-4ab2-aee5-be9083cc3e80",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -112,7 +123,11 @@
   {
    "cell_type": "markdown",
    "id": "89b144d6-f218-4f3f-9947-042b8eb4b992",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Ingestion in Open Search"
    ]
@@ -120,7 +135,11 @@
   {
    "cell_type": "markdown",
    "id": "5a8f1be6-b464-42cc-b1f8-0e9501b2d690",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "```\n",
     "PUT /papers_meta_index\n",
@@ -161,7 +180,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "01b3f22f-63f2-44ed-8d1d-05cd061c42f3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -201,7 +224,10 @@
     "slideshow": {
      "slide_type": ""
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
