Update final feature set jupyter file with join queries

--- a/pmoa/data_preparation/step4/FinalFeatureSetPreparation.ipynb
+++ b/pmoa/data_preparation/step4/FinalFeatureSetPreparation.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "32699525-6ebf-4f8a-9689-f225eeeb7d82",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -17,6 +21,7 @@
    "source": [
     "# Sample code to test sentence transformer for cosine similiarity\n",
     "from sentence_transformers import SentenceTransformer, util\n",
+    "\n",
     "sentences = [\"This is an example sentence\", \"Each sentence is converted\"]\n",
     "\n",
     "model = SentenceTransformer('sentence-transformers/all-MiniLM-L6-v2')\n",
@@ -29,7 +34,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "048206e9-5fbf-442c-944b-d7d16cf9b9ea",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Function to calculate cosine similarity between\n",
@@ -45,7 +54,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d327354c-05fb-44c4-9d57-1cdec4fd57ac",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Features list\n",
@@ -67,11 +80,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e8e5934d-dbce-4eb2-bd72-1926f3edbc1f",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine, MetaData, Table, Column, String, Integer, insert\n",
+    "import time\n",
+    "import psycopg2\n",
+    "from psycopg2.extras import DictCursor\n",
+    "\n",
+    "conn_params = {\n",
+    "    \"host\": \"10.224.68.29\",\n",
+    "    \"port\": \"5432\",\n",
+    "    \"database\": \"pubmed\",\n",
+    "    \"user\": \"admin\",\n",
+    "    \"password\": \"admin\"\n",
+    "}\n",
+    "\n",
+    "engine = create_engine('postgresql://', connect_args=conn_params)\n",
+    "\n",
+    "query = '''\n",
+    "        SELECT * FROM relevance_store_new as rs\n",
+    "        LEFT JOIN metadata as m ON m.pmid = rs.pmid\n",
+    "        LEFT JOIN metadata as cited ON cited.pmid = rs.cited_id\n",
+    "        WHERE rs.pmid IN (select DISTINCT pmid from metadata) AND rs.cited_id IN (select DISTINCT pmid from metadata);\n",
+    "        '''\n",
+    "start = time.perf_counter()\n",
+    "with psycopg2.connect(**conn_params) as conn:\n",
+    "    with conn.cursor(cursor_factory=DictCursor) as cursor:\n",
+    "        cursor.execute(query)\n",
+    "        records = cursor.fetchall()\n",
+    "end = time.perf_counter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b197dcbf",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 1662787, 'pmid': '15289607', 'sentence': 'Phospho-Ser82 of vimentin is dephosphorylated much slower than phospho-Ser38 by PP1c .', 'sentid': 3, 'paraid': 3, 'cited_id': '15289607', 'relevance_score': 1, 'title': 'The mouse kinome: Discovery and comparative genomics of all mouse protein kinases', 'publication_year': 2004, 'cited_by_count': 276}\n",
+      "{'id': 1662117, 'pmid': '12034772', 'sentence': 'In mouse embryos Stk33 expression is found in the developing heart, brain and spinal cord .', 'sentid': 2, 'paraid': 0, 'cited_id': '12034772', 'relevance_score': 1, 'title': 'A requirement for cytoplasmic dynein and dynactin in intermediate filament network assembly and organization', 'publication_year': 2002, 'cited_by_count': 154}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for record in records[:2]:\n",
+    "    print(dict(record))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "412de101-6df1-40eb-8043-fa72ba313fa2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_keys = {\n",
+    "    \"pmid\": \"pmid\",\n",
+    "    \"sentence\": \"new_key2\",\n",
+    "    # No mapping for key3\n",
+    "}\n",
+    "renamed_dict = {new_keys.get(key, key): value for key, value in original_dict.items()}"
+   ]
   }
  ],
  "metadata": {
