Run an evaluation of catboost and update

--- a/pmoa/data_preparation/step4/FinalFeatureSetPreparation.ipynb
+++ b/pmoa/data_preparation/step4/FinalFeatureSetPreparation.ipynb
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to fetch records with metadata: 0.9195583340000013 seconds\n"
+      "Time taken to fetch records with metadata: 0.905188625000001 seconds\n"
      ]
     }
    ],
@@ -203,7 +203,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3m/860dncss64lbz0yf839zmg640000gn/T/ipykernel_2483/2177996526.py:25: RuntimeWarning: divide by zero encountered in log2\n",
+      "/var/folders/3m/860dncss64lbz0yf839zmg640000gn/T/ipykernel_2705/2177996526.py:25: RuntimeWarning: divide by zero encountered in log2\n",
       "  embedding_arr.append(np.log2(record.get('c_in_citations')))\n"
      ]
     },
@@ -211,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to create embeddings for 25 groups: 296.989437709 seconds\n"
+      "Time taken to create embeddings for 25 groups: 296.590352292 seconds\n"
      ]
     }
    ],
@@ -265,31 +265,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20811592\n",
       "18811945\n",
-      "19664212\n",
-      "21904682\n",
-      "21044324\n",
-      "22110950\n",
+      "21457543\n",
+      "23316194\n",
+      "23497105\n",
       "24131735\n",
-      "24966823\n",
+      "24636523\n",
       "24989242\n",
       "19930637\n",
+      "20811592\n",
+      "21762506\n",
+      "21904682\n",
+      "22474440\n",
+      "22625433\n",
+      "24086524\n",
+      "19664212\n",
+      "21044324\n",
+      "21608150\n",
+      "22110950\n",
       "22747670\n",
       "22778732\n",
       "23229565\n",
-      "23497105\n",
-      "21762506\n",
+      "24966823\n",
       "22719179\n",
-      "23316194\n",
-      "22474440\n",
-      "22625433\n",
-      "22909256\n",
-      "24636523\n",
-      "21457543\n",
-      "21608150\n",
       "23797686\n",
-      "24086524\n"
+      "22909256\n"
      ]
     }
    ],
@@ -315,11 +315,11 @@
     {
      "data": {
       "text/plain": [
-       "[[0.4175010323524475, 0.3005062937736511, 4, 81, 8.108524456778168, 1],\n",
-       " [0.35630926489830017, 0.21418243646621704, 6, 108, 7.266786540694901, 1],\n",
-       " [0.5159871578216553, 0.37430161237716675, 10, 111, 8.312882955284355, 1],\n",
-       " [0.1846732497215271, 0.19310936331748962, 4, 49, 6.554588851677638, 1],\n",
-       " [0.6058160066604614, 0.6526394486427307, 13, 84, 6.087462841250339, 1]]"
+       "[[0.5159871578216553, 0.1362968385219574, 10, 111, 8.312882955284355, 1],\n",
+       " [-0.009927734732627869, -0.017229247838258743, 6, 0, 6.599912842187128, 3],\n",
+       " [0.4175010323524475, 0.40701478719711304, 4, 81, 8.108524456778168, 3],\n",
+       " [0.4175010323524475, 0.24443674087524414, 4, 81, 8.108524456778168, 1],\n",
+       " [-0.009927734732627869, -0.0723314881324768, 6, 0, 6.599912842187128, 1]]"
       ]
      },
      "execution_count": 8,
@@ -333,7 +333,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "210c4928",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Divide into test and train groups\n",
@@ -342,18 +352,33 @@
     "train_groups_size = len(embedded_groups)-test_groups_size\n",
     "test_groups = list(embedded_groups.keys())[:test_groups_size]\n",
     "train_groups = list(embedded_groups.keys())[test_groups_size:]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "id": "9a71a7f4",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([(1, 461), (3, 19), (2, 71), (0, 5)])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "test_data =[]\n",
@@ -365,18 +390,33 @@
     "X_test = [data[:-1] for data in test_data]\n",
     "y_test = [data[-1] for data in test_data]\n",
     "Counter(y_test).items()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 11,
+   "id": "e5f79dcc",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([(0, 20), (2, 36), (3, 9), (1, 126)])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_data =[]\n",
     "train_queries = []\n",
@@ -387,33 +427,41 @@
     "X_train = [data[:-1] for data in train_data]\n",
     "y_train = [data[-1] for data in train_data]\n",
     "Counter(y_train).items()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "4842d38e",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "max_relevance = np.max(y_train)\n",
     "y_train /= max_relevance\n",
     "y_test /= max_relevance"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "c1b8da5e",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from catboost import CatBoostRanker, Pool, MetricVisualizer\n",
@@ -428,17 +476,21 @@
     "    label=y_test,\n",
     "    group_id=test_queries\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "18e992dd",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "default_parameters = {\n",
@@ -449,17 +501,21 @@
     "}\n",
     "\n",
     "parameters = {}"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "id": "cd6d11fa",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from copy import deepcopy\n",
@@ -475,27 +531,48 @@
     "    model.fit(train_pool, eval_set=test_pool, plot=True)\n",
     "\n",
     "    return model"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "model = fit_model('RMSE', {'custom_metric': ['PrecisionAt:top=10', 'RecallAt:top=10', 'MAP:top=10']})"
-   ],
+   "execution_count": 16,
+   "id": "a7fd41cb",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/shubhamsati/PycharmProjects/CitationSearch/venv/lib/python3.9/site-packages/catboost/core.py:6219: RuntimeWarning: Regression loss ('RMSE') ignores an important ranking parameter 'group_id'\n",
+      "  warnings.warn(\"Regression loss ('{}') ignores an important ranking parameter 'group_id'\".format(loss_function), RuntimeWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "075e14ea4b6d4a53b98419bbddcdb743",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MetricVisualizer(layout=Layout(align_self='stretch', height='500px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model = fit_model('RMSE', {'custom_metric': ['PrecisionAt:top=10', 'RecallAt:top=10', 'MAP:top=10']})"
+   ]
   }
  ],
  "metadata": {
